try and fix jpg cap problems
fix jpg cap problems by using jpeg

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
                 for (var x = 1; x <= v; x++) {
                     var cell = document.createElement("div");
                     cell.className = "grid-item";
-                    cell.style.backgroundImage = 'url(photos/' + ((i * v) + x) + '.jpg)';
+                    cell.style.backgroundImage = 'url(photos/' + ((i * v) + x) + '.jpeg)';
+
                     //   cell.innerText = (i * v) + x;
                     grid.appendChild(cell);
                 }
