--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
     <link rel="stylesheet" href="index.css">
+    <link href="https://fonts.googleapis.com/css?family=Bebas+Neue&display=swap" rel="stylesheet">
 
     <script>
         function grid(v) {
@@ -22,6 +23,10 @@
         }
     </script>
 </head>
+
+    <header>
+        <span>GAVRIEL </span><span class ="header-cut-out">  CAMBRIDGE</span>
+    </header>
 
 <body>
     <script>
