--- a/index.html
+++ b/index.html
@@ -15,23 +15,28 @@
                     cell.className = "grid-item";
                     cell.style.backgroundImage = 'url(photos/' + ((i * v) + x) + '.jpeg)';
 
-                    //   cell.innerText = (i * v) + x;
+                    //   ]cell.innerText = (i * v) + x;
                     grid.appendChild(cell);
                 }
                 g.appendChild(grid);
             }
         }
     </script>
-</head>
 
+</head>
     <header>
-        <span>GAVRIEL </span><span class ="header-cut-out">  CAMBRIDGE</span>
+        <span>GAVRIEL</span> <span class ="header-cut-out">  CAMBRIDGE</span>
+        <!-- <div class = "contacts">
+            <img class="icon" src="photos/github.png" alt="github">
+            <img class="icon" src="photos/instagram.png" alt="instagram">
+            <img class="icon" src="photos/gmail.png" alt="gmail">
+
+        </div>  -->
     </header>
 
 <body>
     <script>
-        grid(8)
-
+        grid(12)
     </script>
 </body>
 
