--- a/barbados.html
+++ b/barbados.html
@@ -10,7 +10,7 @@
     <header>
         <div>
             <div class="title">
-                <a href="landing.html"><img class="icon" src="photos/back.jpg" alt="github"></a>
+                <a href="index.html"><img class="icon" src="photos/back.jpg" alt="github"></a>
                 <span>barbados</span>
             </div>
         </div>
