--- a/sky.html
+++ b/sky.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div>
-            <div class="title">                <a href="landing.html"><img class="icon" src="photos/back.jpg" alt="github"></a>
+            <div class="title">                <a href="index.html"><img class="icon" src="photos/back.jpg" alt="github"></a>
                 <span>Sky</span></div>
         </div>
 
