fix more linking issues

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </div>
         </a>
 
-        <a href="Projects.html">
+        <a href="projects.html">
         <div class="grid-item" style="background-image:url(photos/projects/1.jpeg);">
             <div class="grid-text">Projects</div>
         </div>
