--- a/kiptopeake.html
+++ b/kiptopeake.html
@@ -31,7 +31,7 @@
                     grid.className = "grid-container";
                     for (var x = 1; x <= v; x++) {
                         var link = document.createElement("a");
-                        link.href = 'photos/kiptopeake/' + ((i * v) + x) + '.jpg';
+                        link.href = 'photos/kiptopeake/' + ((i * v) + x) + '.JPG';
 
                         var cell = document.createElement("div");
                         cell.className = "grid-item";
