JPG vs jpg again

--- a/kiptopeake.html
+++ b/kiptopeake.html
@@ -38,7 +38,7 @@
                         cell.id = ((i * v) + x);
 
                         // cell.innerText = cell.id;
-                        cell.style.backgroundImage = 'url(photos/kiptopeake/' + cell.id + '.jpg)';
+                        cell.style.backgroundImage = 'url(photos/kiptopeake/' + cell.id + '.JPG)';
 
                         // cell.innerText =;
                         //   ]cell.innerText = (i * v) + x;
