--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     </header>
     <a href="cameratrap.html">
-        <div class="header" style="background-image:url(photos/camera-trapping/0.JPG);">
+        <div class="header" style="background-image:url(photos/camera-trapping/0.jpg);">
             <p>Camera Trapping</p>
         </div>
     </a>
