Fix "Disimal" and add raccoon pictures

--- a/gds.html
+++ b/gds.html
@@ -10,7 +10,7 @@
     <header>
         <div>
             <div class="title"> <a href="index.html"><img class="icon" src="photos/back.jpg" alt="github"></a>
-                <span>Great Disimal Swamp</span>
+                <span>Great Dismal Swamp</span>
             </div>
         </div>
 
