--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
         <a href="gds.html">
             <div class="grid-item" style="background-image:url(photos/gds/81.jpg);">
-                <div class="grid-text">Great Disimal Swamp</div>
+                <div class="grid-text">Great Dismal Swamp</div>
             </div>
         </a>
 
